tdl-002: Built a simple gulpfile to stuff Angular in /public/js/ and moved some directories around

--- a/sandbox/tdl/views/index.jade
+++ b/sandbox/tdl/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+block body
+  div
+    h1= title
+  div(ng-view)
+
+  script(TODO)
